# fastapi_docker_ml

./: pyproject.toml  requirements.txt  setup.sh
