[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Goopy Flux", email = "goopy.flux@gmail.com"},
]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.80.0",
    "joblib>=1.1.0",
    "uvicorn[standard]>=0.18.3",
    "scikit-learn==0.24"]

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
